samples/by-property/invalid/nil-test3.bspl
../../tests/nil-test3.bspl